Update register allocator